# Lab_work

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vector_void.c  vector_void.h
tests/: test_lib_bitset  test_lib_matrix  test_lib_vector
tests/test_lib_un/: ordered_set
